--- a/js/js12d/exo.html
+++ b/js/js12d/exo.html
@@ -7,7 +7,8 @@
     <title>JS 12</title>
 </head>
 <body>
-    <h1>JS 12d - table de multiplication avec form</h1>
+    <h1>JS 12d - table de multiplication avec formulaire</h1>
+    <label for="value">Tapez un nombre</label><br>
     <input type="text" name="value" id="value">
     <button type="button" onclick="calcul()">Submit</button>
     <p id="result"></p>
